--- a/src/sass/imports/typo.sass
+++ b/src/sass/imports/typo.sass
@@ -50,6 +50,10 @@ h5
     color: $light-gray
   &--blue
     color: $blue
+  &--green
+    color: $primary
+  &--normal
+    font-weight: normal
 // SHADOWS
 .shodow
   box-shadow: $shadow-primary
