--- a/src/sass/imports/datePicker.sass
+++ b/src/sass/imports/datePicker.sass
@@ -1,13 +1,18 @@
 .date-picker
   position: relative
-  width: 100%
-  max-width: 320px
-  height: 60px
   background-color: #FFF
-  margin: 30px auto
   box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2)
   cursor: pointer
   user-select: none
+  display: flex
+  padding: 1.1rem 2rem
+  line-height: 2.7rem
+  border-radius: 1rem
+  background-color: $bg
+  box-shadow: 0px 1px 3px rgba(5, 41, 83, 0.14)
+  border: 0.1rem solid transparent
+
+  transition: all .15s linear
 
   &:hover
     background-color: #F3F3F3
@@ -19,7 +24,6 @@
     justify-content: center
     align-items: center
     color: #313131
-    font-size: 28px
 
   .dates
     display: none
@@ -28,6 +32,8 @@
     left: 0
     right: 0
     background-color: #FFF
+    min-width: 320px
+
 
     &.active
       display: block
@@ -39,8 +45,8 @@
       border-bottom: 2px solid #EEE
 
       .arrows
-        width: 35px
-        height: 35px
+        width: 40px
+        height: 40px
         display: flex
         justify-content: center
         align-items: center
