--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -3,3 +3,4 @@ extends ./layouts/index.pug
 block content
   include ./partials/thesis.pug
   include ./partials/calculator.pug
+  include ./partials/steps.pug
