--- a/src/pages/partials/header.pug
+++ b/src/pages/partials/header.pug
@@ -9,10 +9,10 @@ header
         .header__navbar
             ul.navbar__list
                 li.navbar__item.navbar__icon
-                    img(src='./img/search.svg')
+                    img(src='./img/search.svg' alt="")
                 li.navbar__item.navbar__icon
                     a.navbar__link.text--bold.text--light-gray
-                        img.mobile--icon(src='./img/mobile-vibration.svg')
+                        img.mobile--icon(src='./img/mobile-vibration.svg' alt="")
                         p.text--light-gray.p--xs Anruf
                 li.navbar__item
                     a.navbar__link.text--light-gray.p--xs Generatoren
