--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -41,3 +41,5 @@ main.wrapper
 @import "./imports/thesis"
 @import "./imports/calculator"
 @import "./imports/datePicker"
+@import "./imports/steps"
+@import "./imports/slider-inline"
