--- a/src/pages/partials/thesis.pug
+++ b/src/pages/partials/thesis.pug
@@ -27,7 +27,7 @@
                 .note
                     .note__header
                         .note__icon
-                            img(src="./img/card-icon.svg", alt="123")
+                            img(src="./img/card-icon.svg" alt)
                         .note__title
                             h5.text--blue Merke:
                     .note__content
