--- a/src/sass/imports/typo.sass
+++ b/src/sass/imports/typo.sass
@@ -42,7 +42,7 @@ h5
   &--xs
     font-size: 1.5rem
   &--bold
-      font-weight: bold
+    font-weight: bold
 .text
   &--bold
     font-weight: bold
@@ -50,6 +50,10 @@ h5
     color: $light-gray
   &--blue
     color: $blue
+  &--green
+    color: $primary
+  &--dark-blue
+    color: $addDarkBlue
 // SHADOWS
 .shodow
   box-shadow: $shadow-primary
