styled calculator form

--- a/src/pages/partials/calculator.pug
+++ b/src/pages/partials/calculator.pug
@@ -27,7 +27,7 @@
                         input.input--num(min='0' name='quantity' value='1' type='number')#count
                         button.plus(onclick="this.parentNode.querySelector('input[type=number]').stepUp()")
 
-                .picker
+                .date-picker
                     .selected-date.p--md#datePicker
                     .dates
                         .month
@@ -58,4 +58,4 @@
 
             .calculator__submit
                 h3.text--green.text--normal € 56.25
-                button.btn Anfragen
+                button.btn.btn--md Anfragen
