--- a/src/sass/imports/btn.sass
+++ b/src/sass/imports/btn.sass
@@ -2,7 +2,7 @@
   background-color: $primary
   color: $white
 
-  padding: 1.8rem 6.75rem
+  padding: 1.6rem 6.75rem
   border-radius: 1rem
 
   border: none
@@ -15,6 +15,8 @@
   &--sm
     padding: 0.6rem 2.4rem
     line-height: 2.25rem
+  &--md
+    padding: 1.5rem 4.3rem
 
   &--secondary
     color: $light-gray
@@ -22,6 +24,7 @@
 
     padding: 0.4rem 2.2rem
     border: 2px solid $border
+    font-size: 1.6rem
 
     &:hover
       border: 2px solid $primary
