--- a/src/sass/imports/dropdown.sass
+++ b/src/sass/imports/dropdown.sass
@@ -30,7 +30,7 @@
 
     transform: rotateZ(45deg) translate(-50%, -50%)
 
-    right: 2rem
+    right: 1.6rem
     top: 50%
 
     transition: all .2s linear
@@ -54,6 +54,10 @@
 .dropdown__label
   pointer-events: none
 
+  white-space: nowrap
+  overflow: hidden
+
+  text-overflow: ellipsis
   width: 100%
   padding: 1.1rem 2rem
 
@@ -66,6 +70,7 @@
   position: absolute
   border-radius: 0.6rem
   background-color: $bg
+  top: calc(100% + 1.5rem)
   z-index: 5
 
   transition: opacity .2s linear
