--- a/src/sass/imports/steps.sass
+++ b/src/sass/imports/steps.sass
@@ -12,6 +12,10 @@
   flex-direction: column
   gap: 1.6rem
 
+.steps__content
+  width: 100%
+  max-width: 90rem
+
 .steps__title
   line-height: 3.8rem
 
