styled steps slider

--- a/src/sass/imports/steps.sass
+++ b/src/sass/imports/steps.sass
@@ -4,6 +4,7 @@
   justify-content: center
   align-items: center
   flex-direction: column
+  margin-bottom: 99px
 
 .steps__header
   text-align: center
@@ -15,6 +16,7 @@
 .steps__content
   width: 100%
   max-width: 90rem
+  margin-top: 25px
 
 .steps__title
   line-height: 3.8rem
