js slider-inline

--- a/src/pages/partials/steps.pug
+++ b/src/pages/partials/steps.pug
@@ -7,30 +7,31 @@
   .steps__content
     .slider-inline 
       .slider-inline__steps 
-        .slider-inline__step.slider-inline__step--active
+        .slider-inline__step#1
           .slider-inline__number 1
           .slider-inline__text
             p.p.p--sm Das passende Thema finden
 
-        .slider-inline__division.slider-inline__division--active
+        .slider-inline__division
 
-        .slider-inline__step.slider-inline__step--active
+        .slider-inline__step#2
           .slider-inline__number 2
           .slider-inline__text
             p.p.p--sm Die Gliederung erstellen
 
-        .slider-inline__division.
+        .slider-inline__division
         
-        .slider-inline__step 
+        .slider-inline__step#3
           .slider-inline__number 3
           .slider-inline__text
             p.p.p--sm Die Facharbeit schreiben
 
         .slider-inline__division
 
-        .slider-inline__step 
+        .slider-inline__step#4
           .slider-inline__number 4
           .slider-inline__text
             p.p.p--sm Die Facharbeit überprüfen (lassen)
 
       .slider-inline__content
+        
