--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -39,6 +39,7 @@ main.wrapper
 @import ./imports/dropdown
 @import './imports/header'
 @import "./imports/thesis"
+@import "./imports/input"
 @import "./imports/calculator"
 @import "./imports/datePicker"
 @import "./imports/steps"
