--- a/src/pages/partials/steps.pug
+++ b/src/pages/partials/steps.pug
@@ -7,31 +7,35 @@
   .steps__content
     .slider-inline 
       .slider-inline__steps 
-        .slider-inline__step#1
+        .slider-inline__step.slider-inline--active(slideId="slide-1")
           .slider-inline__number 1
           .slider-inline__text
             p.p.p--sm Das passende Thema finden
 
         .slider-inline__division
 
-        .slider-inline__step#2
+        .slider-inline__step(slideId="slide-2")
           .slider-inline__number 2
           .slider-inline__text
             p.p.p--sm Die Gliederung erstellen
 
         .slider-inline__division
         
-        .slider-inline__step#3
+        .slider-inline__step(slideId="slide-3")
           .slider-inline__number 3
           .slider-inline__text
             p.p.p--sm Die Facharbeit schreiben
 
         .slider-inline__division
 
-        .slider-inline__step#4
+        .slider-inline__step(slideId="slide-4")
           .slider-inline__number 4
           .slider-inline__text
             p.p.p--sm Die Facharbeit überprüfen (lassen)
 
       .slider-inline__content
+        .slider-inline__slide.slider-inline--active#slide-1 asd
+        .slider-inline__slide#slide-2 chen
+        .slider-inline__slide#slide-3 CHUMAHOD BITS
+        .slider-inline__slide#slide-4 jinger
         
