--- a/src/sass/imports/slider-inline.sass
+++ b/src/sass/imports/slider-inline.sass
@@ -1,3 +1,5 @@
+
+  
 .slider-inline__steps
   display: flex
   gap: .5rem
@@ -9,13 +11,7 @@
   align-items: center
   position: relative
 
-  &--active
-    .slider-inline__number
-      color: $primary
-      background-color: $addGreen
-
-    .slider-inline__text
-      color: $primary
+  
 
 .slider-inline__number
   font-family: $font-title
@@ -51,5 +47,20 @@
   width: 100%
   margin-top: 1.9rem
 
-  &--active
+  &.slider-inline--active
     background-color: $primary
+
+.slider-inline
+  &--active
+    .slider-inline__number
+      color: $primary
+      background-color: $addGreen
+
+    .slider-inline__text
+      color: $primary
+
+.slider-inline__slide
+  display: none
+
+  &.slider-inline--active
+    display: block
