--- a/src/pages/partials/steps.pug
+++ b/src/pages/partials/steps.pug
@@ -34,8 +34,8 @@
             p.p.p--sm Die Facharbeit überprüfen (lassen)
 
       .slider-inline__content
-        .slider-inline__slide.slider-inline--active#slide-1 asd
-        .slider-inline__slide#slide-2 chen
-        .slider-inline__slide#slide-3 CHUMAHOD BITS
-        .slider-inline__slide#slide-4 jinger
+        .slider-inline__slide.slider-inline--active#slide-1
+        .slider-inline__slide#slide-2 
+        .slider-inline__slide#slide-3 
+        .slider-inline__slide#slide-4 
         
