added small slider

--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -44,3 +44,4 @@ main.wrapper
 @import "./imports/datePicker"
 @import "./imports/steps"
 @import "./imports/slider-inline"
+@import './imports/slider'
