--- a/src/sass/imports/typo.sass
+++ b/src/sass/imports/typo.sass
@@ -29,6 +29,7 @@ h5
   &--sm
     font-size: 1.6rem
 
+
 // P
 .p
   font-family: $font-text
@@ -43,7 +44,10 @@ h5
     font-size: 1.5rem
   &--bold
     font-weight: bold
+    
 .text
+  &--lg
+    font-size: 2.2rem
   &--bold
     font-weight: bold
   &--light-gray
