--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -4,3 +4,4 @@ block content
   include ./partials/thesis.pug
   include ./partials/calculator.pug
   include ./partials/steps.pug
+  include ./partials/feedback.pug
