--- a/src/pages/partials/js.pug
+++ b/src/pages/partials/js.pug
@@ -1,4 +1,5 @@
 script(src="./js/dropdown.min.js")
 script(src="./js/datePicker.min.js")
 script(src="./js/sliderInline.min.js")
+script(src="./js/slider.min.js")
 
