--- a/src/pages/partials/steps.pug
+++ b/src/pages/partials/steps.pug
@@ -41,6 +41,60 @@
           .slide__wrapper
             .slider__list_wrapper
               ul.slider__list
+                li.text--lg.text--light-gray.slider__btn.slider--active(data-id="slide-2") 
+                  span
+                  p Die Einleitung schreiben
+                li.text--lg.text--light-gray.slider__btn(data-id="slide-1") 
+                  span
+                  p Einführung
+                li.text--lg.text--light-gray.slider__btn(data-id="slide-3") 
+                  span
+                  p Den Hauptteil verfassen
+                li.text--lg.text--light-gray.slider__btn(data-id="slide-4") 
+                  span 
+                  p Das Fazit schreiben
+                li.text--lg.text--light-gray.slider__btn(data-id="slide-5") 
+                  span
+                  p Richtig zitieren will gelernt sein!
+            .slider__slide.slider__active
+              .slider__content
+                p.p--sm Die Einleitung enthält diese Elemente:
+                ul.content__list
+                  li.content__item.p--sm 
+                    span 1. 
+                    p.p--sm Einführung in das Thema und die Frage, die behandelt wird.
+                  li.content__item.p--sm 
+                    span 2. 
+                    p.p--sm Übersicht über die inhaltliche Vorgehensweise und die Struktur der Arbeit.
+                  li.content__item.p--sm 
+                    span 3.
+                    p.p--sm Formulierung des Ziels der Arbeit und Erläuterung der notwendigen Schritte, um dieses zu erreichen.
+                div
+                  span.p--sm  Übrigens:
+                  p.p--sm Die Einleitung macht fünf bis zehn Prozent der Facharbeit aus.
+            .slider__slide
+              .slider__content
+                p.p--sm Die Einleitung enthält diese Elemente:
+                ul.content__list
+                  li.content__item.p--sm 
+                    span 1. 
+                    p.p--sm Einführung in das Thema und die Frage, die behandelt wird.
+                  li.content__item.p--sm 
+                    span 2. 
+                    p.p--sm Übersicht über die inhaltliche Vorgehensweise und die Struktur der Arbeit.
+                  li.content__item.p--sm 
+                    span 3.
+                    p.p--sm Formulierung des Ziels der Arbeit und Erläuterung der notwendigen Schritte, um dieses zu erreichen.
+                div
+                  span.p--sm  Übrigens:
+                  p.p--sm Die Einleitung macht fünf bis zehn Prozent der Facharbeit aus.
+        .slider-inline__slide#slide-2
+          .slider-inline__header
+            h3.text--blue Schritt 2
+            h2.text--blue  Die Facharbeit schreiben:
+          .slide__wrapper
+            .slider__list_wrapper
+              ul.slider__list
                 li.text--lg.text--light-gray.slider__btn.slider__btn--active(data-id="slide-2") 
                   span
                   p Die Einleitung schreiben
@@ -72,5 +126,79 @@
                 div
                   span.p--sm  Übrigens:
                   p.p--sm Die Einleitung macht fünf bis zehn Prozent der Facharbeit aus.
-
-        
+        .slider-inline__slide#slide-3
+          .slider-inline__header
+            h3.text--blue Schritt 3
+            h2.text--blue  Die Facharbeit schreiben:
+          .slide__wrapper
+            .slider__list_wrapper
+              ul.slider__list
+                li.text--lg.text--light-gray.slider__btn.slider__btn--active(data-id="slide-2") 
+                  span
+                  p Die Einleitung schreiben
+                li.text--lg.text--light-gray.slider__btn(data-id="slide-1") 
+                  span
+                  p Einführung
+                li.text--lg.text--light-gray.slider__btn(data-id="slide-3") 
+                  span
+                  p Den Hauptteil verfassen
+                li.text--lg.text--light-gray.slider__btn(data-id="slide-4") 
+                  span 
+                  p Das Fazit schreiben
+                li.text--lg.text--light-gray.slider__btn(data-id="slide-5") 
+                  span
+                  p Richtig zitieren will gelernt sein!
+            .slider__slide
+              .slider__content
+                p.p--sm Die Einleitung enthält diese Elemente:
+                ul.content__list
+                  li.content__item.p--sm 
+                    span 1. 
+                    p.p--sm Einführung in das Thema und die Frage, die behandelt wird.
+                  li.content__item.p--sm 
+                    span 2. 
+                    p.p--sm Übersicht über die inhaltliche Vorgehensweise und die Struktur der Arbeit.
+                  li.content__item.p--sm 
+                    span 3.
+                    p.p--sm Formulierung des Ziels der Arbeit und Erläuterung der notwendigen Schritte, um dieses zu erreichen.
+                div
+                  span.p--sm  Übrigens:
+                  p.p--sm Die Einleitung macht fünf bis zehn Prozent der Facharbeit aus.
+        .slider-inline__slide#slide-4
+          .slider-inline__header
+            h3.text--blue Schritt 4
+            h2.text--blue  Die Facharbeit schreiben:
+          .slide__wrapper
+            .slider__list_wrapper
+              ul.slider__list
+                li.text--lg.text--light-gray.slider__btn.slider__btn--active(data-id="slide-2") 
+                  span
+                  p Die Einleitung schreiben
+                li.text--lg.text--light-gray.slider__btn(data-id="slide-1") 
+                  span
+                  p Einführung
+                li.text--lg.text--light-gray.slider__btn(data-id="slide-3") 
+                  span
+                  p Den Hauptteil verfassen
+                li.text--lg.text--light-gray.slider__btn(data-id="slide-4") 
+                  span 
+                  p Das Fazit schreiben
+                li.text--lg.text--light-gray.slider__btn(data-id="slide-5") 
+                  span
+                  p Richtig zitieren will gelernt sein!
+            .slider__slide
+              .slider__content
+                p.p--sm Die Einleitung enthält diese Elemente:
+                ul.content__list
+                  li.content__item.p--sm 
+                    span 1. 
+                    p.p--sm Einführung in das Thema und die Frage, die behandelt wird.
+                  li.content__item.p--sm 
+                    span 2. 
+                    p.p--sm Übersicht über die inhaltliche Vorgehensweise und die Struktur der Arbeit.
+                  li.content__item.p--sm 
+                    span 3.
+                    p.p--sm Formulierung des Ziels der Arbeit und Erläuterung der notwendigen Schritte, um dieses zu erreichen.
+                div
+                  span.p--sm  Übrigens:
+                  p.p--sm Die Einleitung macht fünf bis zehn Prozent der Facharbeit aus.      
