--- a/src/sass/imports/slider.sass
+++ b/src/sass/imports/slider.sass
@@ -2,14 +2,14 @@
     display: flex
     flex-direction: row
     justify-content: space-between
-.slide__wrapper
     margin-top: 21px
+
 .slider__list_wrapper
     max-width: 40%
 .slider__slide
     max-width: 40%
 .slider__btn
-    
+    cursor: pointer
     display: flex
     align-items: center
     margin-bottom: 3rem
@@ -19,14 +19,18 @@
         height: 1px
         border-bottom: 1px solid $light-gray
         display: block
-    &--active
-        span
-            border-bottom: 1px solid $primary
-            width: 30px
-            margin-right: 10px
+        pointer-events: none
+    p
+        pointer-events: none
 
-        p
-            color: $primary
+.slider--active
+    span
+        border-bottom: 1px solid $primary
+        width: 30px
+        margin-right: 10px
+
+    p
+        color: $primary
 .slider__content
     color: $light-gray
     div
