--- a/src/pages/partials/steps.pug
+++ b/src/pages/partials/steps.pug
@@ -44,19 +44,19 @@ include ./mixins.pug
             .slide__wrapper
               +sliderList
                 ul.slider__list
-                  li.text--lg.text--light-gray.slider__btn.slider--active(data-id="slide-1-1") 
+                  li.text--lg.text--light-gray.slider__btn.slider--active(data-id="slide-1-1" data-step-id="step-1") 
                     span
                     p Die Einleitung schreiben
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-1-2") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-1-2" data-step-id="step-1") 
                     span
                     p Einführung
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-1-3") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-1-3" data-step-id="step-1") 
                     span
                     p Den Hauptteil verfassen
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-1-4") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-1-4" data-step-id="step-1") 
                     span 
                     p Das Fazit schreiben
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-1-5") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-1-5" data-step-id="step-1")
                     span
                     p Richtig zitieren will gelernt sein!
               //- SLIDES
@@ -145,19 +145,19 @@ include ./mixins.pug
             .slide__wrapper
               +sliderList
                 ul.slider__list
-                  li.text--lg.text--light-gray.slider__btn.slider--active(data-id="slide-2-1") 
+                  li.text--lg.text--light-gray.slider__btn.slider--active(data-id="slide-2-1" data-step-id="step-2") 
                     span
                     p Die Einleitung schreiben
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-2-2") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-2-2" data-step-id="step-2") 
                     span
                     p Einführung
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-2-3") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-2-3" data-step-id="step-2") 
                     span
                     p Den Hauptteil verfassen
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-2-4") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-2-4" data-step-id="step-2") 
                     span 
                     p Das Fazit schreiben
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-2-5") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-2-5" data-step-id="step-2") 
                     span
                     p Richtig zitieren will gelernt sein!
               //- SLIDES
@@ -246,19 +246,19 @@ include ./mixins.pug
             .slide__wrapper
               +sliderList
                 ul.slider__list
-                  li.text--lg.text--light-gray.slider__btn.slider--active(data-id="slide-3-1") 
+                  li.text--lg.text--light-gray.slider__btn.slider--active(data-id="slide-3-1" data-step-id="step-3") 
                     span
                     p Die Einleitung schreiben
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-3-2") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-3-2" data-step-id="step-3") 
                     span
                     p Einführung
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-3-3") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-3-3" data-step-id="step-3") 
                     span
                     p Den Hauptteil verfassen
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-3-4") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-3-4" data-step-id="step-3") 
                     span 
                     p Das Fazit schreiben
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-3-5") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-3-5" data-step-id="step-3") 
                     span
                     p Richtig zitieren will gelernt sein!
               //- SLIDES
@@ -347,19 +347,19 @@ include ./mixins.pug
             .slide__wrapper
               +sliderList
                 ul.slider__list
-                  li.text--lg.text--light-gray.slider__btn.slider--active(data-id="slide-4-1") 
+                  li.text--lg.text--light-gray.slider__btn.slider--active(data-id="slide-4-1" data-step-id="step-4") 
                     span
                     p Die Einleitung schreiben
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-4-2") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-4-2" data-step-id="step-4") 
                     span
                     p Einführung
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-4-3") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-4-3" data-step-id="step-4") 
                     span
                     p Den Hauptteil verfassen
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-4-4") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-4-4" data-step-id="step-4") 
                     span 
                     p Das Fazit schreiben
-                  li.text--lg.text--light-gray.slider__btn(data-id="slide-4-5") 
+                  li.text--lg.text--light-gray.slider__btn(data-id="slide-4-5" data-step-id="step-4") 
                     span
                     p Richtig zitieren will gelernt sein!
               //- SLIDES
