--- a/src/sass/imports/slider.sass
+++ b/src/sass/imports/slider.sass
@@ -18,6 +18,7 @@
     display: flex
     align-items: center
     margin-bottom: 3rem
+
     span
         margin-right: 20px
         width: 20px
@@ -25,8 +26,11 @@
         border-bottom: 1px solid $light-gray
         display: block
         pointer-events: none
+
+        transition: all .15s linear
     p
         pointer-events: none
+        transition: all .3s linear
 
     &.slider--active
         span
