--- a/src/sass/imports/btn.sass
+++ b/src/sass/imports/btn.sass
@@ -30,3 +30,54 @@
       border: 2px solid $primary
       color: $primary
       box-shadow: none
+
+  &--link
+    border: none
+    appearance: none
+    outline: none
+    background: none
+
+    font-size: 1.8rem
+    line-height: 100%
+    font-weight: bold
+    font-family: $font-title
+
+    padding-bottom: 1rem
+    transition: all .3s linear
+
+    position: relative
+
+    &::after
+      content: ''
+      height: 2px
+      width: 100%
+
+      position: absolute
+      top: 2.8rem
+      left: 0
+
+      background-color: $primary
+
+      -webkit-mask: url('/img/circle-orig.svg')
+      -webkit-mask-position: center
+      -webkit-mask-size: contain
+
+    &::before
+      content: ''
+      height: 2px
+      width: 0
+
+      position: absolute
+      top: 2.8rem
+      left: 50%
+      transform: translateX(-50%)
+
+      background-color: transparent
+
+      transition: all .3s linear
+
+    &:hover
+      &::before
+        height: 2px
+        width: 100%
+        background-color: $primary
