--- a/src/sass/imports/feedback.sass
+++ b/src/sass/imports/feedback.sass
@@ -6,38 +6,15 @@
   text-align: center
   margin-bottom: 2.5rem
 
+.feedback__content
+  display: flex
+  gap: 2rem
+  margin-bottom: 3rem
 
-
-.card
-  max-width: 380px
-  max-height: 500px
-
-  box-shadow: $shadow-card
-  padding: 4rem 3rem 3rem 3rem
-
+.feedback__footer
   display: flex
   flex-direction: column
-  justify-content: space-between
-
-.card__header
-  display: flex
-  justify-content: space-between
-
-.card__rating
-  display: flex
-  gap: 1rem
   align-items: center
-
-.card__number
-  font-family: Open Sans
-  font-size: 1.8rem
-  font-style: normal
-  font-weight: 400
-  line-height: 1.8rem
-  text-align: center
-  align-items: center
-
-.card__list
-  display: flex
-  gap: .5rem
-  align-items: center
+  justify-content: center
+  gap: 3rem
+  margin-bottom: 14rem
