--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -45,4 +45,6 @@ main.wrapper
 @import "./imports/steps"
 @import "./imports/slider-inline"
 @import "./imports/feedback"
+@import "./imports/card"
 @import './imports/slider'
+@import './imports/carousel'
