--- a/src/pages/partials/feedback.pug
+++ b/src/pages/partials/feedback.pug
@@ -6,40 +6,57 @@ include ./mixins.pug
     .feedback__text
       p.p.p--md.text--light-gray Lass dich von den Erfolgsgeschichten unserer Kunden inspirieren!
   .feedback__content
-    +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
-      p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
+    .carousel#feedback
+      .carousel__item#feedback-1
+        +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
+          p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
 
-    +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
-      p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
+        +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
+          p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
 
-    +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
-      p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
+        +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
+          p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
+
+      .carousel__item#feedback-2
+        +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
+          p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
+
+        +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
+          p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
+
+        +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
+          p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
+      
+      .carousel__item#feedback-3
+        +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
+          p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
+
+        +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
+          p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
+
+        +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
+          p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
     
-    +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
-      p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
+      .carousel__item#feedback-4
+        +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
+          p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
+
+        +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
+          p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
+
+        +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
+          p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
     
-    +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
-      p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
-    
-    +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
-      p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
-    
-    +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
-      p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
-    
-    +card(4.2, "./img/avatar.png", 21015, "Bachelorarbeit|Geisteswissenschaften")
-      p.p.p--md.text--italic.text--light-gray Ich wollte mich recht herzlich bei Ihnen für die tolle Analyse bedanken - ich habe die Note A+ bekommen. Tausend Dank für die tolle Arbeit und liebe Grüße aus Wien
-  
   .feedback__footer
     .feedback__add
       button.btn--link.text--green Feedback hinzufügen
     .carousel__nav
       ul.carousel__nav_list
         li.carousel__nav_item
-          button.carousel__btn.carousel--active(data-id="1" data-carousel="feedback")
+          button.carousel__btn.carousel--active(data-id="feedback-1" data-carousel-id="feedback")
         li.carousel__nav_item
-          button.carousel__btn(data-id="2" data-carousel="feedback")
+          button.carousel__btn(data-id="feedback-2" data-carousel-id="feedback")
         li.carousel__nav_item
-          button.carousel__btn(data-id="3" data-carousel="feedback")
+          button.carousel__btn(data-id="feedback-3" data-carousel-id="feedback")
         li.carousel__nav_item
-          button.carousel__btn(data-id="4" data-carousel="feedback")
+          button.carousel__btn(data-id="feedback-4" data-carousel-id="feedback")
