--- a/src/sass/imports/carousel.sass
+++ b/src/sass/imports/carousel.sass
@@ -1,3 +1,11 @@
+.carousel
+  display: flex
+  gap: 2rem
+
+.carousel__item
+  display: flex
+  gap: 2rem
+  
 .carousel__nav_list
   display: flex
   justify-content: center
